day1/006/k8s/fluentbit.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: aws-for-fluent-bit
  namespace: logging
spec:
  selector:
    matchLabels:
      app: aws-for-fluent-bit
  template:
    metadata:
      labels:
        app: aws-for-fluent-bit
    spec:
      serviceAccountName: fluent-bit
      tolerations:
        - operator: Exists
      containers:
        - name: fluent-bit
          image: IMAGE_ECR/ecr-public/aws-observability/aws-for-fluent-bit:stable
          command: ["/bin/bash", "/fluent-bit/etc/entrypoint.sh"]
          volumeMounts:
            - name: varlog
              mountPath: /var/log
            - name: config
              mountPath: /fluent-bit/etc/
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
        - name: config
          configMap:
            name: fluent-bit-config
            defaultMode: 0755
